5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1837_2220.log
== TEST (2019-06-27 11:53:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(sum(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:54:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for j in range(shape(vet)[0]):
	print(sum(vet[j,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:54:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for j in range(shape(vet)[0]):
	print(sum(vet[j,:]))
-- EXECUTION TIME:
1.13468
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
474.2
382.2
358.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:54:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(sum(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:54:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(sum(vet[i,:]))
-- EXECUTION TIME:
0.912604
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
474.2
382.2
358.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:12:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(sum(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:12:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(sum(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:12:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(sum(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:13:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[1]):
	print(sum(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:13:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[1]):
	print(sum(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:13:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[1]):
	print(sum(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:13:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for j in range(shape(vet)[1]):
	print(sum(vet[j,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:16:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for j in range(shape(vet)[]):
	print(max(vet[j,:]))
-- EXECUTION TIME:
0.751246
-- ERROR:
  File "/home/codebench/codes/1837/2220/main.py", line 8
    for j in range(shape(vet)[]):
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:16:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for j in range(shape(vet)[0]):
	print(max(vet[j,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:16:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for j in range(shape(vet)[0]):
	print(max(vet[j,:]))
-- EXECUTION TIME:
1.2715
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:16:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for j in range(shape(vet)[0]):
	print(max(vet[j,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:16:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for j in range(shape(vet)[0]):
	print(max(vet[j,:]))
-- EXECUTION TIME:
1.08126
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:16:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(max(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:16:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(max(vet[i,:]))
-- EXECUTION TIME:
0.984713
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:17:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(max(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:17:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(max(vet[i,:]))
-- EXECUTION TIME:
1.07706
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:17:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(max(vet[i,:]))
-- EXECUTION TIME:
1.65813
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:17:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(max(vet[i,:]))
-- EXECUTION TIME:
2.68391
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:17:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(max(vet[i,:]))
-- EXECUTION TIME:
2.90594
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1837/2220/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:17:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(max(vet[i,:]))
-- EXECUTION TIME:
2.55127
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1837/2220/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:46:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a entrada")))

a = shape(vet)[0]

for i in range(shape(vet)[0]):
	print(max(vet[i,:]))
-- EXECUTION TIME:
1.08804
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
